# rexs-api-cpp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
cmake/: create_docs.cmake  fetch_cli11.cmake  fetch_date.cmake  fetch_doctest.cmake  fetch_fmt.cmake  fetch_json.cmake  fetch_miniz.cmake  fetch_pugixml.cmake  fetch_valijson.cmake
examples/: BuilderExample.cxx  CMakeLists.txt
include/rexsapi/: Attribute.hxx  Base64.hxx  CodedValue.hxx  Component.hxx  ConversionHelper.hxx  DataSourceLoader.hxx  DataSourceResolver.hxx  Defines.hxx  Exception.hxx  ExternalSubcomponentsChecker.hxx  FileTypes.hxx  FileUtils.hxx  Format.hxx  Json.hxx  JsonModelLoader.hxx  JsonModelSerializer.hxx  JsonSchemaValidator.hxx  JsonSerializer.hxx  JsonValueDecoder.hxx  LoadSpectrum.hxx  Mode.hxx  Model.hxx  ModelBuilder.hxx  ModelHelper.hxx  ModelLoader.hxx  ModelMerger.hxx  ModelSaver.hxx  ModelVisitor.hxx  Relation.hxx  RelationTypeChecker.hxx  Result.hxx  RexsVersion.hxx  Rexsapi.hxx  Types.hxx  Unit.hxx  ValidityChecker.hxx  Value.hxx  Value_Details.hxx  XMLModelLoader.hxx  XMLModelSerializer.hxx  (+6 more)
include/rexsapi/database/: Attribute.hxx  Component.hxx  ComponentAttributeMapper.hxx  EnumValues.hxx  FileResourceLoader.hxx  Interval.hxx  Model.hxx  ModelRegistry.hxx  Unit.hxx  XMLModelLoader.hxx
models/: permissibile_sub_components.json  relation_types.json  rexs-dbmodel.xsd  rexs-file.xsd  rexs-schema.json  rexs-schema.xsd  rexs_model_1.0_de.xml  rexs_model_1.0_en.xml  rexs_model_1.1_de.xml  rexs_model_1.1_en.xml  rexs_model_1.2_de.xml  rexs_model_1.2_en.xml  rexs_model_1.3_de.xml  rexs_model_1.3_en.xml  rexs_model_1.4_de.xml  rexs_model_1.4_en.xml  rexs_model_1.5_de.xml  rexs_model_1.5_en.xml  rexs_model_1.6_de.xml  rexs_model_1.6_en.xml  rexs_schema_1.0_de.xml  rexs_schema_1.0_en.xml  rexs_schema_1.1_de.xml  rexs_schema_1.1_en.xml  rexs_schema_1.2_de.xml  rexs_schema_1.2_en.xml  rexs_schema_1.3_de.xml  rexs_schema_1.3_en.xml  rexs_schema_1.4_de.xml  rexs_schema_1.4_en.xml  rexs_schema_1.5_de.xml  rexs_schema_1.5_en.xml  rexs_schema_1.6_de.xml  rexs_schema_1.6_en.xml  rexs_schema_1.7_de.xml  rexs_schema_1.7_en.xml  rexs_schema_2.0.0_de.xml  rexs_schema_2.0.0_en.xml
src/: CMakeLists.txt  Version.hxx.in
test/: AttributeTest.cxx  Base64Test.cxx  CMakeLists.txt  CodedValuesTest.cxx  ComponentTest.cxx  ConversionHelperTest.cxx  DataSourceLoaderTest.cxx  FileUtilsTest.cxx  JsonModelLoaderTest.cxx  JsonModelSerializerTest.cxx  JsonSchemaValidatorTest.cxx  JsonValueDecoderTest.cxx  LoadSpectrumTest.cxx  ModeTest.cxx  ModelBuilderTest.cxx  ModelHelperTest.cxx  ModelLoaderTest.cxx  ModelMergerTest.cxx  ModelTest.cxx  ModelVisitorTest.cxx  PermissibleSubcomponentsMappingTest.cxx  RelationTypeCheckerTest.cxx  ResultTest.cxx  RexsVersionTest.cxx  TemporaryDirectory.hxx  TestHelper.hxx.in  TestModel.hxx  TestModelHelper.hxx  TestModelLoader.hxx  TypesTest.cxx  UnitTest.cxx  ValidityCheckerTest.cxx  ValueTest.cxx  ValueTypeTest.cxx  XMLModelLoaderTest.cxx  XMLModelSerializerTest.cxx  XMLUtilsTest.cxx  XMLValueDecoderTest.cxx  XSDSchemaValidatorTest.cxx  ZipArchiveTest.cxx  (+1 more)
test/database/: AttributeTest.cxx  ComponentAttributeMapperTest.cxx  ComponentTest.cxx  EnumValuesTest.cxx  FileResourceLoaderTest.cxx  IntervalTest.cxx  ModelRegistryTest.cxx  ModelTest.cxx  UnitTest.cxx  XMLModelLoaderTest.cxx
test/example_models/: FVA-Industriegetriebe_2_stufig_1-6.rexs  FVA-Industriegetriebe_2stufig_1-4.rexs  FVA-Industriegetriebe_2stufig_1-4.rexsj  FVA_worm_stage_1-4.rexs  FVA_worm_stage_1-4.rexsj  no_rexs_file.rexsz
test/example_models/external_sources/: database_bearing.rexs  placeholder_model.rexs
test/example_models/external_sources/example_1/: database_shaft.rexs
test/example_models/external_sources/example_10/: .database_shaft.rexs.swp  .placeholder_model.rexs.swp  database_bearing.rexs  database_shaft.rexs
test/example_models/external_sources/example_2/: placeholder_model.rexs
test/example_models/external_sources/example_3/: placeholder_model.rexs
test/example_models/external_sources/example_4/: database_material.rexs  placeholder_model.rexs
test/example_models/external_sources/example_5/: database_bearing.rexs
test/example_models/external_sources/example_6/: database_shaft.rexs  placeholder_model.rexs
test/example_models/external_sources/example_7/: placeholder_model.rexs
test/example_models/external_sources/example_8/: database_bearing.rexsj  database_shaft.rexsj  placeholder_model.rexsj
test/example_models/external_sources/example_9/: placeholder_model.rexs
tools/: CMakeLists.txt  Cli11.hxx  ModelChecker.cxx  ModelConverter.cxx  ModelDumper.cxx  ToolsHelper.hxx
